<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="market_error">"Couldn't launch the market"</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="accept">Accept</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit_id">ca-app-pub-4763734187192607/2212152774</string>
    <string name="app_name">VideoFramePlayer</string>
    <string name="brightness">Brightness</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="default_web_client_id">776294757132-rl3i5lrq31qkmkrssre9kokh8hv8uupf.apps.googleusercontent.com</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="firebase_database_url">https://videoframeplayer.firebaseio.com</string>
    <string name="ga_trackingId">UA-66281938-3</string>
    <string name="gcm_defaultSenderId">776294757132</string>
    <string name="google_api_key">AIzaSyC4NgaWDMIu5gksHdinA9L-aQQt5GJiqwk</string>
    <string name="google_app_id">1:776294757132:android:88c4c722a6af7cb7</string>
    <string name="google_crash_reporting_api_key">AIzaSyC4NgaWDMIu5gksHdinA9L-aQQt5GJiqwk</string>
    <string name="google_storage_bucket">videoframeplayer.appspot.com</string>
    <string name="menu_delete_tip">Delete</string>
    <string name="menu_search_tip">Search</string>
    <string name="menu_share_tip">Share</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="play">Play</string>
    <string name="refresh_menu_title">Refresh</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_message">Please take a moment to rate our app on play store. This would help us to keep improving this app!</string>
    <string name="rta_dialog_no">Never</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_title">Rate our app</string>
    <string name="search_hint">Search videos...</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_length">Length</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_menu_title">Sort by...</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="text_time">time</string>
    <string name="text_video">Video</string>
    <string name="title_section1">Video</string>
    <string name="title_section2">Recordings</string>
    <string name="title_section3">Directories</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="volume">Volume</string>
</resources>
