<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_action_search" android:id="@+id/menu_search" android:orderInCategory="0" android:title="@string/menu_search_tip" app:showAsAction="always|collapseActionView" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:icon="@null" android:id="@+id/menu_sort_by" android:title="@string/sort_menu_title">
        <menu
          xmlns:android="http://schemas.android.com/apk/res/android">
            <group android:checkableBehavior="single">
                <item android:icon="@null" android:id="@+id/sort_by_name" android:title="@string/sort_by_name" />
                <item android:icon="@null" android:id="@+id/sort_by_date" android:title="@string/sort_by_date" />
                <item android:icon="@null" android:id="@+id/sort_by_length" android:title="@string/sort_by_length" />
                <item android:icon="@null" android:id="@+id/sort_by_size" android:title="@string/sort_by_size" />
            </group>
        </menu>
    </item>
    <item android:icon="@null" android:id="@+id/menu_refresh" android:title="@string/refresh_menu_title" />
</menu>